[package]
name = "aoc2015"
version = "0.1.0"
authors = ["Charith Rathnayake <charith.n.rathnayake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1.3.3"
serde_json = "1.0.45"
colored = "1.9"